old/Ingress-with-ExternalDNS.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  #annotations:
    #kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: eapp1.surfacesystems.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usermgmt-webapp-service
                port: 
                  number: 80
